--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -2,10 +2,32 @@ name: Check Style Code
 
 on:
   push:
-
-
-
+    branches:
+      - new_branch
+#      - '!new_branch'   #Исключить ветку
+#      - '**'
 
   pull_request:
+    branches-ignore:
+      - new_branch
 
 jobs:
+  checkstyle_project:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Git clone repo
+        uses: actions/checkout@v2
+
+      - name: Set version Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.12.3'
+
+      - name: Install dependecies
+        run: |
+          pip install flake8 
+
+      - name: Run linter
+        run: |
+          flake8 .
